Fixed radial input horizontal alignment

--- a/src/app/views/server/deploy/steps/burner/server.deploy.step.sbc.burner.scss
+++ b/src/app/views/server/deploy/steps/burner/server.deploy.step.sbc.burner.scss
@@ -170,10 +170,14 @@
     gap: 10px;
 
     div {
-      display: flex;
       align-items: center;
-      text-wrap: nowrap;
+      display: flex;
       gap: 5px;
+
+      input[type="radio"] {
+        vertical-align: middle;
+        margin: 0;
+      }
     }
   }
 }
